@@ -43,7 +43,12 @@ public class BigDelimiterAtom extends Atom {
     
     public Box createBox(TeXEnvironment env) {
         Box b = DelimiterFactory.create(delim, env, size);
-	b.setShift(-(b.getHeight() + b.getDepth()) / 2 - env.getTeXFont().getAxisHeight(env.getStyle()));
-	return b;
+	HorizontalBox hbox = new HorizontalBox();
+	final float h = b.getHeight();
+	final float total = h + b.getDepth();
+	final float axis = env.getTeXFont().getAxisHeight(env.getStyle());
+	b.setShift(-total / 2 + h - axis);
+	hbox.add(b);
+	return hbox;
     }
 }
